# pantry-api

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: build.yml
evals/: router_eval.py  run.py
evals/datasets/: pairs.jsonl
evals/reports/: cascade.md  router_comparison.md  three_phase.md
pantry_planner/: api.py  config.py  db.py  demo.py  flow.py  models.py  prompts.py  selector.py  tracing.py
pantry_planner/nlsearch/: __init__.py  query_parser.py  retrieve.py  schemas.py  sql_builder.py  units.py  vocab.py
pantry_planner/router/: __init__.py  base.py  cascade.py  classifier.py  decision.py  deterministic.py  three_phase.py
seeds/: products.json  recipes.json
tests/: test_nlsearch.py  test_router.py
