[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantry-planner"
version = "0.1.0"
description = "LLM-driven grocery matcher with model-router — demo project"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.40.0",
    "burr[start]>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    # Pin: Burr's tracking UI ships templates that break on Jinja2 3.1.5+
    # (cache-key change makes template lookup raise TypeError). Revisit
    # once Burr updates its templating layer.
    "jinja2==3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["pantry_planner*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
